sandbox-frontendapp/sandbox-frontendapp-rollout.yaml
apiVersion: argoproj.io/v1alpha1 
kind: Rollout 
metadata:
  name: sandbox-frontendapp-rollout
  namespace: demo
  labels:
    app: sandbox-frontendapp
    
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sandbox-frontendapp
  template:
    metadata:
      labels:
        app: sandbox-frontendapp
         
    spec:
      containers:
      - name: sandbox-frontendapp
        image: harbor.hqokd.nshcloud.com/sandbox-frontendapp/sandbox-frontendapp
        resources:
          limits:
            cpu: 200m
          requests:
            cpu: 100m
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
      imagePullSecrets:
      - name: harbor
          
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
 
    blueGreen: 
      previewService: sandbox-frontendapp-preview 
      activeService: sandbox-frontendapp 
      autoPromotionEnabled: false
      previewReplicaCount: 1
      scaleDownDelaySeconds: 60
