sandbox-frontendapp/sandbox-frontendapp-svc-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-frontendapp-preview
  namespace: demo
spec:
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    app: sandbox-frontendapp
