sandbox-frontendapp/sandbox-frontendapp-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sandbox-frontendapp
  namespace: demo
  labels:
    app.kubernetes.io/instance: sandbox-frontendapp
spec:
  host: sandbox-frontendapp.apps.hqokd.nshcloud.com
  to:
    kind: Service
    name: sandbox-frontendapp
    weight: 100
  port:
    targetPort: 3000
  wildcardPolicy: None
